--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                   <li class="nav-item mr-4 mb-2 mb-lg-0">
-                    <a class="nav-link active" href="services.html">REGISTRATION</a>
+                    <a class="nav-link active" href="gstregister.html">REGISTRATION</a>
                   </li>
               <li class="nav-item mr-4 mb-2 mb-lg-0">
                 <a class="nav-link" href="contacts.html">CONTACTS</a>
