--- a/home-page.html
+++ b/home-page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="no-js">
   <!-- Head -->
   <head>
@@ -118,7 +118,7 @@
       <!-- End Navbar -->
 
       <!-- Promo Block -->
-      <section class="js-parallax u-promo-block u-promo-block--mheight-600 u-overlay u-overlay--dark text-white" style="background-image: url(assets/img-temp/1920x1080/gst2.JPEG);">
+      <section class="js-parallax u-promo-block u-promo-block--mheight-600 u-overlay u-overlay--dark text-white" style="background-image: url(assets/img-temp/1920x1080/gst2.jpeg);">
         <!-- Promo Content -->
         <div class="container u-overlay__inner u-ver-center u-content-space">
           <div class="row justify-content-center">
@@ -280,7 +280,7 @@
           <div class="row">
             <div class="card-deck">
               <div class="card">
-                <img src="assets/img-temp/1920x1080/gst1.JPEG" class="card-img-top" alt="...">
+                <img src="assets/img-temp/1920x1080/gst1.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">GST Verification</h5>
                   <p class="card-text">At any point of time you carry business with GSTIN, when you found any dealer’s GSTIN wrong or mistakenly written in invoices, you can check for details of GSTIN, whether GSTIN exists or not.
@@ -296,7 +296,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="assets/img-temp/1920x1080/gst3.JPEG" class="card-img-top" alt="..." style="margin-top: 50px; height: 35%;">
+                <img src="assets/img-temp/1920x1080/gst3.jpeg" class="card-img-top" alt="..." style="margin-top: 50px; height: 35%;">
                 <div class="card-body">
                   <h5 class="card-title">Online GST Registration</h5>
                   <p class="card-text">Any Business Person whose aggregate turnover in a financial year exceeds Rs 40 lakhs or Persons making any inter-State taxable supply of goods/ services; has to mandatorily apply for GST Registration.
@@ -313,7 +313,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="assets/img-temp/1920x1080/gst4.JPEG" class="card-img-top" alt="..." style="margin-top: 50px; height: 35%;">
+                <img src="assets/img-temp/1920x1080/gst4.jpeg" class="card-img-top" alt="..." style="margin-top: 50px; height: 35%;">
                 <div class="card-body">
                   <h5 class="card-title">GST Calculator</h5>
                   <p class="card-text">GST calculator helps you find out either net or gross price of your product based on a percentage-based GST tax rate. It's very simple to use.</p>
